--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+notify = "6.1.1"
 regex = "1.10.5"
 rouille = "3.6.2"
 serde_json = "1.0.120"
