--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+comrak = "0.26.0"
 fancy-regex = "0.13.0"
 notify = "6.1.1"
 rouille = "3.6.2"
