logging and change Err types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,23 @@
 [package]
 name = "simple"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+color-print = "0.3.6"
 comrak = "0.26.0"
 fancy-regex = "0.13.0"
 notify = "6.1.1"
 rouille = "3.6.2"
 serde_json = "1.0.120"
+
+[profile.release]
+debug = 1
+
+[rust]
+debuginfo-level = 1
+
+[build]
+rustflags = ["-C", "symbol-mangling-version=v0"]
