--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 color-print = "0.3.6"
 comrak = "0.26.0"
 fancy-regex = "0.13.0"
+lazy_static = "1.5.0"
 notify = "6.1.1"
 rouille = "3.6.2"
 serde_json = "1.0.120"
