--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,6 +10,7 @@ color-print = "0.3.6"
 comrak = "0.26.0"
 fancy-regex = "0.13.0"
 lazy_static = "1.5.0"
+minify-html = "0.15.0"
 notify = "6.1.1"
 rouille = "3.6.2"
 serde_json = "1.0.120"
