--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ fancy-regex = "0.13.0"
 lazy_static = "1.5.0"
 minify-html = "0.15.0"
 notify = "6.1.1"
+once_cell = "1.20.2"
 rouille = "3.6.2"
 serde_json = "1.0.120"
 simple-websockets = "0.1.6"
