--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 color-print = "0.3.6"
 comrak = "0.26.0"
 fancy-regex = "0.13.0"
-lazy_static = "1.5.0"
 minify-html = "0.15.0"
 notify = "6.1.1"
+num_cpus = "1.16.0"
 once_cell = "1.20.2"
 rouille = "3.6.2"
 serde_json = "1.0.120"
