--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "simple"
-version = "0.3.0"
+name = "simple-web"
+version = "0.3.1"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/Tnixc/simple"
+description = "A simple build tool that assembles a static site from components, templates, and data."
+authors = ["Tnixc <tnixxc@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,3 +20,8 @@ once_cell = "1.20.2"
 rouille = "3.6.2"
 serde_json = "1.0.120"
 simple-websockets = "0.1.6"
+
+[[bin]]
+name = "replacer"
+path = "src/main.rs"
+
